deploy/overlays/development/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-api-v1
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: api
          imagePullPolicy: Always
