deploy/overlays/development/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aggregator-api-v1-service
spec:
  type: NodePort
  ports:
    - port: 8080
