deploy/overlays/development/patches/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: aggregator-api-v1-virtualservice
  namespace: istio-system
